[package]
name = "prmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
colorgrad = "0.6.2"
git2 = "0.16.1"
maud = "0.24.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
walkdir = "2.3.2"
